Fix:  spacing in timestamp and commit range (#1028)

--- a/web/src/utils/timePopoverLocal/TimePopoverWithLocal.module.scss
+++ b/web/src/utils/timePopoverLocal/TimePopoverWithLocal.module.scss
@@ -1,7 +1,7 @@
 .timeWrapper {
   display: flex;
   align-items: center;
-  gap: var(--spacing-small);
+  gap: var(--spacing-2);
 
   .timezone {
     width: 15%;
